fix: Fix selection overflow

--- a/src/components/SelectMultiple/style.scss
+++ b/src/components/SelectMultiple/style.scss
@@ -31,9 +31,9 @@
       justify-content: flex-start;
       gap: 1rem;
 
-      flex: none;
-      flex-grow: 0;
-      margin: 0rem 0.4rem;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     &__placeholder {
